# screenpipe

etc/tmp/prototype1/: Cargo.toml  FFMPEG_SETUP.md
etc/tmp/prototype1/docs/: specs.md
etc/tmp/prototype1/src/: activity.rs  capture.rs  diff.rs  encode.rs  main.rs
