[package]
name = "prototype1"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eframe = "0.29.1"
tokio = { version = "1.15", features = ["full", "tracing"] }
image = "0.25"
xcap = "0.4.1"
image-compare = "0.4.1"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
crossbeam = "0.8.4"
dirs = "5.0"
which = "6.0"
active-win-pos-rs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
